--- a/css/infor.css
+++ b/css/infor.css
@@ -1,21 +1,14 @@
-body {
-    background-color: #181A1B;
-}
 #infor{
+    position: relative;
     background-color: #181A1B;
     color: white;
     font-family: Montserrat-SemiBold;
-    /* margin-top: 85px; */
-    padding-top: 100px;
+    margin-top: 30px;
 }
-#infor .text-center{
-    background-color: #181A1B;
-    /* margin-top: 85px; */
-}
-
 #infor label{
     padding-left: 340px;
     margin-top: 20px;
+
 }
 #infor input{
     border: 1px solid #EBB853;
@@ -27,33 +20,27 @@ body {
     padding: 10px;
     font-size: 15px;
 }
-#infor .confirm {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-}
-
-#infor button {
+#btn{
     background-color: #937438;
     border: none;
-    width: 300px;
+    width: 450px;
     height: 45px;
     border-radius: 10px;
     color: white;
-    margin-top: 30px;
-    margin-bottom: 125px;
-    font-size: 18px;
-
+    margin: 50px auto;
 }
-
-.error {
-    border: 1px solid red;
-    background-color: #ffcccc;
+.row button {
+    width: 25px;
+    height: 25px;
+    background-color: black;
 }
-
-.error-message {
-    padding-top: 5px;
-    font-family: Montserrat-SemiBoldItalic;
-    color: red;
+#hienthi{
+    width: 300px;
+    height: 100px;
+    color: white;
+    font-family: Montserrat-SemiBold;
+    background-color: bisque;
+    display: none;
+    position: absolute;
+    top:45%;
 }
-  
