--- a/css/infor.css
+++ b/css/infor.css
@@ -1,14 +1,21 @@
+body {
+    background-color: #181A1B;
+}
 #infor{
-    position: relative;
     background-color: #181A1B;
     color: white;
     font-family: Montserrat-SemiBold;
-    margin-top: 30px;
+    /* margin-top: 85px; */
+    padding-top: 100px;
 }
+#infor .text-center{
+    background-color: #181A1B;
+    /* margin-top: 85px; */
+}
+
 #infor label{
     padding-left: 340px;
     margin-top: 20px;
-
 }
 #infor input{
     border: 1px solid #EBB853;
@@ -20,19 +27,28 @@
     padding: 10px;
     font-size: 15px;
 }
-#btn{
+#infor .confirm {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+#infor button {
     background-color: #937438;
     border: none;
-    width: 450px;
+    width: 300px;
     height: 45px;
     border-radius: 10px;
     color: white;
-    margin: 50px auto;
+    margin-top: 30px;
+    margin-bottom: 125px;
+    font-size: 18px;
+
 }
-.row button {
-    width: 25px;
-    height: 25px;
-    background-color: black;
+
+.error {
+    border: 1px solid red;
+    background-color: #ffcccc;
 }
 
 .error-message {
@@ -40,3 +56,4 @@
     font-family: Montserrat-SemiBoldItalic;
     color: red;
 }
+  
