--- a/css/registergg.css
+++ b/css/registergg.css
@@ -1,14 +1,23 @@
+body {
+    background-color: #181A1B;
+}
+
 #infor{
-    position: relative;
     background-color: #181A1B;
     color: white;
     font-family: Montserrat-SemiBold;
-    margin-top: 30px;
+    /* margin-top: 85px; */
+    padding-top: 100px;
 }
+
+#infor .text-center{
+    background-color: #181A1B;
+    /* margin-top: 85px; */
+}
+
 #infor label{
     padding-left: 340px;
     margin-top: 20px;
-
 }
 #infor input{
     border: 1px solid #EBB853;
@@ -20,19 +29,33 @@
     padding: 10px;
     font-size: 15px;
 }
-#btn{
+#infor .confirm {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+#infor button {
     background-color: #937438;
     border: none;
-    width: 450px;
+    width: 300px;
     height: 45px;
     border-radius: 10px;
     color: white;
-    margin: 50px auto;
+    margin-top: 30px;
+    margin-bottom: 125px;
+    font-size: 18px;
 }
-.row button {
-    width: 25px;
-    height: 25px;
-    background-color: black;
+
+.error {
+    border: 1px solid red;
+    background-color: #ffcccc;
+}
+
+.error-message {
+    padding-top: 5px;
+    font-family: Montserrat-SemiBoldItalic;
+    color: red;
 }
 #hienthi{
     width: 300px;
@@ -43,4 +66,9 @@
     display: none;
     position: absolute;
     top:45%;
+}
+.row button {
+    width: 25px;
+    height: 25px;
+    background-color: black;
 }
