--- a/css/roomstyle.css
+++ b/css/roomstyle.css
@@ -1,37 +1,49 @@
 
 /* banner */
-#banner{
-    margin-top: 40px;
-    color: white;
-}
-#banner .img{
-    position: relative;
-    height: 450px;
-}
-#banner .img img{
-    filter: brightness(70%);
-    height: 305px;
-}
-#banner .box {
-    position: absolute;
-    left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-#banner .box .trangtri{
-    border: 2px solid white;
-    background-color: white;
-    height: 60px;
-    width: 2px;
-    margin: 0 auto;
-}
-/* end banner */
-.container{
-    margin: 0 auto;
+.header img{
     width: 100%;
-    height: 100%;
-    background-color:rgb(24,26,27 ) ;
+    height: 350px;
+    filter:brightness(60%);
 }
+.header_mota{
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top:25%;
+    left:40%;
+}
+.mota1{
+    color: white;
+    position: relative;
+}
+.mota2{
+    color: rgb(184,145,70) ;
+}
+.mota3{
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    position: relative;
+}
+  .mota1::after{
+    content: "";
+    border-left: solid white;
+    width: 2px;
+    height: 50px;
+    position: absolute;
+    top:-200%;
+    left:120%;
+} 
+.mota2::after{
+    content: "";
+    border-left: solid white;
+    height:50px;
+    position: absolute;
+    bottom: -40%;
+    left:53%;
+} 
+/* end banner */
+
 .checkroom_wapper img{
     width: 1450px;
     height: 300px;
@@ -111,7 +123,6 @@
 }
 #category,#room, #phong{
     flex:1;
-    height: 45px;
     border: 1px solid rgb(205, 194, 194);
     background-color:  rgb(24,26,27 );
     color: white;
@@ -127,13 +138,23 @@ input{
 ::placeholder{
     color:white;
 }
-.check{
+button{
     color: white;
+    font-size: 20px;
     background-color: rgb(184,145,70) ;
-    font-size: 18px;
-    padding: 10px 25px 10px 25px;
+    height: 43px;
+    width: 40%;
+    padding: 10px 25px 10px 10px;
     border: none;
+    position: relative;
 }
+button img{
+    width: 30px;
+    position: absolute;
+    top:20%;
+    left:65%;
+}
+
 .mainroom{
     width: 65%;
 }
@@ -159,6 +180,7 @@ input{
 .icon_giuong{
     margin-right:100px;
 }
+
 .mainroom111 {
     font-size: 20px;
     margin: 25px 0 10px 0;
@@ -173,7 +195,7 @@ input{
     top:25px;
 }
 .mainroom112{
-    font-size: 12px;
+    font-size: 13px;
 }
 .mainroom13{
     display: block;
@@ -207,34 +229,7 @@ input{
     font-size: 17px ;
     font-weight: bold;
 }
-.mainroom_2{
-    border: 1px solid rgb(48,50,51 ) ;
-    display: flex;
-    height: 200px;
-    width: 100%;
-    color: white;
-}
-.mainroom_3{
-    border: 1px solid rgb(48,50,51 ) ;
-    display: flex;
-    height: 200px;
-    width: 100%;
-    color: white;
-}
-.mainroom_4{
-    border: 1px solid rgb(48,50,51 ) ;
-    display: flex;
-    height: 200px;
-    width: 100%;
-    color: white;
-}
-.mainroom_5{
-    border: 1px solid rgb(48,50,51 ) ;
-    display: flex;
-    height: 200px;
-    width: 100%;
-    color: white;
-}
+
 .mainroom>div{
     margin-bottom: 20px;
 }
