--- a/css/roomcheck.css
+++ b/css/roomcheck.css
@@ -42,7 +42,7 @@
     display: flex;
     margin-bottom: 30px;
 }
-#ma,#sdt{
+#madatphong,#sdt{
     flex: 1;
     background-color: rgb(24,26,27);
     border: 1px solid rgb(184,145,70) ;
