--- a/css/allroom.css
+++ b/css/allroom.css
@@ -1,29 +1,46 @@
 /* banner */
-#banner{
-    margin-top: 88px;
-    color: white;
+.header img{
+    width: 100%;
+    height: 350px;
+    filter:brightness(60%);
 }
-#banner .img{
-    position: relative;
-    height: 450px;
-}
-#banner .img img{
-    filter: brightness(70%);
-    height: 305px;
-}
-#banner .box {
+.header_mota{
+    font-size: 20px;
+    text-align: center;
     position: absolute;
-    left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+    top:25%;
+    left:40%;
 }
-#banner .box .trangtri{
-    border: 2px solid white;
-    background-color: white;
-    height: 60px;
+.mota1{
+    color: white;
+    position: relative;
+}
+.mota2{
+    color: rgb(184,145,70) ;
+}
+.mota3{
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    position: relative;
+}
+  .mota1::after{
+    content: "";
+    border-left: solid white;
     width: 2px;
-    margin: 0 auto;
-}
+    height: 50px;
+    position: absolute;
+    top:-200%;
+    left:120%;
+} 
+.mota2::after{
+    content: "";
+    border-left: solid white;
+    height:50px;
+    position: absolute;
+    bottom: -40%;
+    left:53%;
+} 
 /* end banner */
 .main{
     display: flex;
@@ -57,12 +74,8 @@
     width: 90%;
     margin: auto;
 }
-/* .form_item{
-    display: flex;
-    height: 45px;
-    margin-bottom: 18px;
-} */
-.form div{
+
+.form_item{
     display: flex;
     height: 45px;
     margin-bottom: 18px;
@@ -85,32 +98,26 @@ input{
 ::placeholder{
     color:white;
 }
-.main_menu .btn{
-    width: 60%;
-    position: relative;
-    padding: 0;
-}
-.check{
-    color: white;
-    background-color: rgb(184,145,70) ;
-    font-size: 20px;
-    height: 45px;
-    border: none;
-    padding-right: 50px;
-}
 
-.main_menu .btn img{
+button{
+    color: white;
+    font-size: 20px;
+    background-color: rgb(184,145,70) ;
+    height: 43px;
+    width: 40%;
+    padding: 10px 25px 10px 10px;
+    border: none;
+    position: relative;
+}
+button img{
     width: 30px;
     position: absolute;
     top:20%;
     left:65%;
 }
+
 .main_room{
     width: 70%;
-}
-.main_room>div{
-    display: flex;
-    color: rgb(204, 211, 216);
 }
 
 .main_anh img{
@@ -123,8 +130,8 @@ input{
 }
 .main_nd p:first-child{
     background-color: rgb(211, 163, 75);
-    width: 100px;
-    padding: 5px;
+    width: 115px;
+    padding: 5px ;
     box-sizing: border-box;
     font-size: 13px;
     font-weight:400;
@@ -147,24 +154,30 @@ input{
 .icon_nguoi{
     margin-left: 50px;
 }
-.main_nd_anh{
-    position: relative;
-    margin: 10px 0px 10px 10px;
+.main_room1{
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap; 
+    justify-content: space-evenly;
+    gap: 10px;
+    color: rgb(204, 211, 216);
 }
-.main_nd_anh p:first-child{
-    background-color: rgb(211, 163, 75);
-    width: 100px;
-    padding: 5px;
-    box-sizing: border-box;
-    font-size: 13px;
-    font-weight:400;
-    position: absolute;
-    top:-60%;
+.main_room1_1{
+    border: 1px solid white;
+    width: 280px;
+    margin-top:15px;
 }
-.main_nd_anh p:nth-child(2){
-    font-size: 19px;
+
+ .chitiet a{
+    text-decoration: none;
+    color: white; 
+    border-radius: 3px;
+    padding: 0 6px ;
+    background-color: rgb(184, 146, 95);
 }
-.main_nd_anh p:nth-child(3){
-    font-size: 14px;
-    margin: 10px 0 15px 0;
+.chitiet a:hover{
+    cursor: pointer;
+    font-weight: bold;
 }
+
+
