--- a/css/restaurant/form1.css
+++ b/css/restaurant/form1.css
@@ -51,9 +51,17 @@ width: 120px;
 /* end history */
 
 /* menu */
-#menu{
+#menumonan{
     background-color: white;
     color: black;
+}
+#menumonan button{
+    border: solid 1px #937438;
+    color: #937438;
+    background-color: transparent;
+    font-family: Montserrat-SemiBold;
+    margin-top: 1rem;
+    padding: 10px;
 }
 /* end menu */
 
