--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ li {
 
 #booktable {
   position: relative;
-  background: url(../img/form1/booktable.png) no-repeat;
+  background: url(../img/restaurant/main/booktable.png) no-repeat;
   background-size: cover;
   font-size: 18px;
 
