--- a/css/restaurant/menu/menulist.module.scss
+++ b/css/restaurant/menu/menulist.module.scss
@@ -14,6 +14,7 @@ html {
         img {
             filter: brightness(70%);
             height: 305px;
+
             margin-bottom: 60px;
         }
     }
@@ -37,17 +38,18 @@ html {
 #content {
     padding: 0rem 10rem;
     font-family: "Montserrat";
+    
     .sub__content {
         border: 2px solid gray;
-        
+        margin-bottom: 15px;
         position: relative;
         display: flex;
 
         .image {
             img {
                 filter: brightness(70%);
-                height: 500px;
-                margin-bottom: 60px;
+                height: 340px;
+                width: 500px;
             }
         }
 
@@ -55,11 +57,11 @@ html {
             margin: 0px 20px;
             h4 {
                 font-family: "Montserrat-Bold";
-                font-size: 90px;
+                font-size: 40px;
             }
             .describe {
                 margin-top: -15px;
-                font-size: 25px;
+                font-size: 20px;
             }
 
             .sup__detail {
