--- a/css/restaurant/menu/menu_detail.css
+++ b/css/restaurant/menu/menu_detail.css
@@ -74,3 +74,39 @@
     color: #E1B168;
     margin: 0 5px;
 }
+
+#similar-dish h6{
+    margin-bottom: 0;
+}
+#similar-dish .title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+#similar-dish .title h3{
+    margin: 0px;
+}
+#similar-dish .title button{
+    background-color: transparent;
+    color: #E1B168;
+    border: 2px solid #E1B168;
+    padding: 10px 25px;
+    /* margin-left: 25px; */
+}
+
+#similar-dish .title button:hover{
+    background-color: #E1B168;
+    color: white;
+}
+
+#similar-dish .information{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#similar-dish .information .vote{
+    color: #bd945f;
+    margin-bottom: 0.5rem;
+}
