--- a/css/restaurant/cart.module.scss
+++ b/css/restaurant/cart.module.scss
@@ -66,17 +66,25 @@ body {
         }
 
         button {
-            background-color: #fff5;
-            border: none;
+            background-color: transparent;
+            color: #E1B168;
+            border: 2px solid #E1B168;
+            height: 30px;
+            width: 30px;
         }
-
+        button:hover {
+            background-color: #E1B168;
+            color: white;
+        }
     }
 }
-.active .card{
+
+.active .card {
     left: calc(100% - 500px);
 }
-.active .container{
-   transform: translateX(-200px);
+
+.active .container {
+    transform: translateX(-120px);
 }
 
 header {
@@ -146,7 +154,7 @@ header {
 
 .card {
     position: fixed;
-    top:0;
+    top: 0;
     left: 100%;
     width: 500px;
     background-color: #453E3B;
