--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ li {
   background: url(../img/restaurant/main/booktable.png) no-repeat;
   background-size: cover;
   font-size: 18px;
-
+  /* filter: brightness(30%); */
 }
 
 #booktable .content {
@@ -286,7 +286,7 @@ li {
   height: 400px;
   width: 700px;
   background-color: black;
-  opacity: 0.8;
+  opacity: 0.95;
 }
 
 #booktable .form input{
