--- a/css/restaurant/menu/menulist.module.scss
+++ b/css/restaurant/menu/menulist.module.scss
@@ -63,7 +63,17 @@ html {
                 margin-top: -15px;
                 font-size: 20px;
             }
-
+            button{
+                background-color: transparent;
+                color: black;
+                border: 2px solid black;
+                padding: 10px 25px;
+                margin-right: 10px;
+            }
+            button:hover{
+                background-color: black;
+                color: white;
+            }
             .sup__detail {
                 display: flex;
                 align-items: center;
