--- a/css/pay.css
+++ b/css/pay.css
@@ -171,5 +171,18 @@
     padding-top: 30px;
     padding-bottom: 20px;
     padding-right: 110px;
-    
+}
+
+#tieptuc .btntieptuc{
+    font-family: Montserrat-SemiBold; 
+    height:50px;
+    width: 300px; 
+    background-color: #937438; 
+    color: white;
+    border: none;
+}
+
+#tieptuc .btntieptuc:hover{
+    background-color: white;
+    color: #937438;
 }
