--- a/css/roomstyle.css
+++ b/css/roomstyle.css
@@ -167,7 +167,7 @@ button img{
 }
 .mainroom11{
     flex:3;
-    margin-left: 40px;
+    padding-left: 40px;
     position: relative;
 }
 .mainroom13{
