--- a/css/restaurant/menu/menulist.module.scss
+++ b/css/restaurant/menu/menulist.module.scss
@@ -31,6 +31,120 @@ html {
         }
     }
 }
+hcon {
+    display: grid;
+    grid-template-columns: 1fr 50px;
+    margin-top: 50px;
+  }
+  hcon .shopping {
+    position: relative;
+    text-align: right;
+  }
+  hcon .shopping img {
+    width: 50px;
+  }
+  hcon .shopping span {
+    background-color: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    top: -5px;
+    left: 99%;
+    padding: 1px 8px;
+  }
+  .supercard{
+      position: fixed;
+      top:0;
+      left: 100%;
+      width: 30%;
+      background-color: #453E3B;
+      height: 87%;
+      transition: 0.5s;
+      z-index: 3;
+  }
+  .active .supercard{
+      left: calc(100% - 30%);
+      margin-top: 88px;
+  }
+  .active .container{
+     transform: translateX(-120px);
+  }
+  .supercard h1 a{
+      color: #E8BC0E;
+      font-weight: 100;
+      margin: 0;
+      padding: 0 20px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+  }
+  .supercard .checkOut{
+      position: absolute;
+      bottom: 0px;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+  
+  }
+  .supercard .checkOut {
+    button {
+    background-color: #E8BC0E;
+      width: 100%;
+      height: 70px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      cursor: pointer;
+  }
+  div{
+      background-color: #E8BC0E;
+      width: 100%;
+      height: 70px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      cursor: pointer;
+  }
+  }
+  
+  .supercard .checkOut div:nth-child(2){
+      background-color: #1C1F25;
+      color: #fff;
+  }
+  .listCard li{
+      display: grid;
+      grid-template-columns: 100px repeat(3, 1fr);
+      color: #fff;
+      row-gap: 10px;
+  }
+  .listCard li div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .listCard li img{
+      width: 90%;
+  }
+  .listCard li button{
+      background-color: transparent;
+      color: #E1B168;
+      border: 2px solid #E1B168;
+      height: 30px;
+      width: 30px;
+  }
+  .listCard li button:hover{
+      background-color: #E1B168;
+      color: white;
+  }
+  .listCard .count{
+      margin: 0 10px;
+  }
 
 #content {
     padding: 0rem 10rem;
