--- a/css/pay.css
+++ b/css/pay.css
@@ -113,7 +113,7 @@
     align-items: center;
 }
 #service .dichvu{
-    margin-left: 70px;
+    margin: 20px 50px;
     font-family:Montserrat-SemiBold;
 }
 
@@ -140,21 +140,18 @@
     /* padding-top: 30px; */
 }
 
-#udai .container img{
+#udai img{
     /* align-items: center; */
     height: 60px;
     /* margin-top: 10px; */
 }
-#udai .container .img{
-    align-items: center;
+#udai .img img{
+    /* height: 45px; */
 }
 #udai .ud{
-    margin: 20px;
-    margin-left: 80px;
+    margin: 20px 50px;
 }
-#udai .ud .img{
-    align-items: center;
-}
+
 #udai .ud .content{
     margin-top: 10px;
     margin-left: 20px;
