--- a/css/thongtinphong.css
+++ b/css/thongtinphong.css
@@ -75,3 +75,14 @@ td{
     background-color: white;
     color: #937438;
 }
+button {
+    background-color: #937438;
+    color: white;
+    padding: 5px 10px;
+    margin-top: 30px;
+    border: none;
+  }
+ button:hover{
+    font-size: 17px ;
+    font-weight: bold;
+}
