--- a/css/restaurant/menu/menulist.module.scss
+++ b/css/restaurant/menu/menulist.module.scss
@@ -31,19 +31,23 @@ html {
         }
     }
 }
+
 hcon {
     display: grid;
     grid-template-columns: 1fr 50px;
     margin-top: 50px;
-  }
-  hcon .shopping {
+}
+
+hcon .shopping {
     position: relative;
     text-align: right;
-  }
-  hcon .shopping img {
+}
+
+hcon .shopping img {
     width: 50px;
-  }
-  hcon .shopping span {
+}
+
+hcon .shopping span {
     background-color: red;
     border-radius: 50%;
     display: flex;
@@ -54,102 +58,124 @@ hcon {
     top: -5px;
     left: 99%;
     padding: 1px 8px;
-  }
-  .supercard{
-      position: fixed;
-      top:0;
-      left: 100%;
-      width: 30%;
-      background-color: #453E3B;
-      height: 87%;
-      transition: 0.5s;
-      z-index: 3;
-  }
-  .active .supercard{
-      left: calc(100% - 30%);
-      margin-top: 88px;
-  }
-  .active .container{
-     transform: translateX(-120px);
-  }
-  .supercard h1 a{
-      color: #E8BC0E;
-      font-weight: 100;
-      margin: 0;
-      padding: 0 20px;
-      height: 80px;
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-  }
-  .supercard .checkOut{
-      position: absolute;
-      bottom: 0px;
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-  
-  }
-  .supercard .checkOut {
+}
+
+.supercard {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 30%;
+    background-color: #453E3B;
+    height: 88%;
+    transition: 0.5s;
+    z-index: 3;
+}
+
+.active .supercard {
+    left: calc(100% - 30%);
+    margin-top: 88px;
+}
+
+.active #content {
+    transform: translateX(-120px);
+}
+#content {
+    margin: auto;
+    transition: 0.5s;
+    margin-top: -70px;
+}
+
+.supercard {
+    margin-top: 88px;
+
+    h1 a {
+        color: #E8BC0E;
+        font-weight: 100;
+        margin-top: 0px;
+        padding: 0 20px;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+    }
+}
+
+.supercard .checkOut {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+
+.supercard .checkOut {
     button {
-    background-color: #E8BC0E;
-      width: 100%;
-      height: 70px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: bold;
-      cursor: pointer;
-  }
-  div{
-      background-color: #E8BC0E;
-      width: 100%;
-      height: 70px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: bold;
-      cursor: pointer;
-  }
-  }
-  
-  .supercard .checkOut div:nth-child(2){
-      background-color: #1C1F25;
-      color: #fff;
-  }
-  .listCard li{
-      display: grid;
-      grid-template-columns: 100px repeat(3, 1fr);
-      color: #fff;
-      row-gap: 10px;
-  }
-  .listCard li div{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .listCard li img{
-      width: 90%;
-  }
-  .listCard li button{
-      background-color: transparent;
-      color: #E1B168;
-      border: 2px solid #E1B168;
-      height: 30px;
-      width: 30px;
-  }
-  .listCard li button:hover{
-      background-color: #E1B168;
-      color: white;
-  }
-  .listCard .count{
-      margin: 0 10px;
-  }
+        background-color: #E8BC0E;
+        width: 100%;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    div {
+        background-color: #E8BC0E;
+        width: 100%;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        cursor: pointer;
+    }
+}
+
+.supercard .checkOut div:nth-child(2) {
+    background-color: #1C1F25;
+    color: #fff;
+}
+
+.listCard li {
+    display: grid;
+    grid-template-columns: 100px repeat(3, 1fr);
+    color: #fff;
+    row-gap: 10px;
+}
+
+.listCard li div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.listCard li img {
+    width: 90%;
+}
+
+.listCard li button {
+    background-color: transparent;
+    color: #E1B168;
+    border: 2px solid #E1B168;
+    height: 30px;
+    width: 30px;
+}
+
+.listCard li button:hover {
+    background-color: #E1B168;
+    color: white;
+}
+
+.listCard .count {
+    margin: 0 10px;
+}
 
 #content {
     padding: 0rem 10rem;
     font-family: "Montserrat";
-    
+
     .sub__content {
         border: 2px solid #E1B168;
         margin-bottom: 30px;
@@ -166,33 +192,40 @@ hcon {
 
         .detail {
             margin: 0px 20px;
+
             h4 {
                 font-family: "Montserrat-Bold";
                 font-size: 40px;
             }
+
             .describe {
                 margin-top: -15px;
                 font-size: 20px;
             }
-            button{
+
+            button {
                 background-color: transparent;
                 color: #E1B168;
                 border: 2px solid #E1B168;
                 padding: 10px 25px;
                 margin-right: 10px;
             }
-            button:hover{
+
+            button:hover {
                 background-color: #E1B168;
                 color: white;
             }
+
             .sup__detail {
                 display: flex;
                 align-items: center;
+
                 .infor {
                     margin-left: 10px;
                     font-size: 20px;
                     font-weight: 400;
                 }
+
                 .topic {
                     font-size: 20px;
                     font-family: "Montserrat-Bold";
