tranform + upgrade sql

--- a/css/restaurant/main.css
+++ b/css/restaurant/main.css
@@ -50,8 +50,8 @@
 #history .content p {
     font-size: 14px;
     font-family: Montserrat-Regular;
-    color: #717272;
-    margin-bottom: 0px;
+    color: #3f3f3f;
+    margin-bottom: 15px;
 }
 
 #history .img {
